# OOP-HER

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Proeftoets/: DigitaleTicket.cpp  DigitaleTicket.h  PapierenTicket.cpp  PapierenTicket.h  README.md  ServiceUitgave.h  Ticket.cpp  Ticket.h  TicketService.cpp  TicketService.h
SlicingProbleem/: Hond.cpp  Hond.h  Kennel.cpp  Kennel.h  README.md  SintBernard.cpp  SintBernard.h  Tekkel.cpp  Tekkel.h
