cmake_minimum_required(VERSION 3.15)
project(Intro_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Intro_OOP main.cpp Proeftoets/Ticket.cpp Proeftoets/Ticket.h Proeftoets/DigitaleTicket.cpp Proeftoets/DigitaleTicket.h Proeftoets/PapierenTicket.cpp Proeftoets/PapierenTicket.h Proeftoets/TicketService.cpp Proeftoets/TicketService.h Proeftoets/ServiceUitgave.cpp Proeftoets/ServiceUitgave.h SlicingProbleem/Hond.cpp SlicingProbleem/Hond.h SlicingProbleem/SintBernard.cpp SlicingProbleem/SintBernard.h SlicingProbleem/Kennel.cpp SlicingProbleem/Kennel.h SlicingProbleem/Tekkel.cpp SlicingProbleem/Tekkel.h)
